# python-json-patch

./: .gitignore  Makefile  ext_tests.py  jsonpatch.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py  tests.py
jsonpatch/: __init__.py  jsonpatch.py
src/: __init__.py  jsonpatch.py  jsonpatch_cli.py
