[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonpatch"
dynamic = ["version"]
description = " Apply JSON-Patches (RFC 6902) "
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.7"
authors = [{ name = "Stefan Kögl", email = "stefan@skoegl.net" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = ["jsonpointer>=1.9"]

[project.urls]
Documentation = "https://python-json-patch.readthedocs.org/"
Homepage = "https://github.com/stefankoegl/python-json-patch"
PyPI = "https://pypi.org/pypi/jsonpatch"
Repository = "https://github.com/stefankoegl/python-json-patch.git"
"Test Coverage" = "https://coveralls.io/r/stefankoegl/python-json-patch"
Tests = "https://travis-ci.org/stefankoegl/python-json-patch"
Website = "https://github.com/stefankoegl/python-json-patch"

[project.scripts]
jsondiff = "jsonpatch.jsondiff:diff_files"
jsonpatch = "jsonpatch.jsonpatch_cli:patch_files"

[tool.hatch.version]
path = "src/jsonpatch.py"


[tool.hatch.build.sources]
"src/" = "jsonpatch/"
